--- a/StudentApp/StudentApp/Base.lproj/Main.storyboard
+++ b/StudentApp/StudentApp/Base.lproj/Main.storyboard
@@ -14,17 +14,136 @@
         <scene sceneID="E4R-4k-ZT5">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MDf-lR-MnK" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <viewController id="OP0-bE-IPH" sceneMemberID="viewController">
+                <viewController id="OP0-bE-IPH" customClass="QuestionViewController" customModule="StudentApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="rnH-cX-dsE">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="BkD-kM-WEx">
+                                <rect key="frame" x="16" y="96" width="343" height="625"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="hsI-fk-ixg">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="36"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Header:" textAlignment="natural" lineBreakMode="clip" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Tc-eZ-lzO">
+                                                <rect key="frame" x="0.0" y="0.0" width="103" height="36"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yLL-yL-oKp">
+                                                <rect key="frame" x="119" y="0.0" width="224" height="36"/>
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="OaG-nz-s70">
+                                        <rect key="frame" x="0.0" y="52.000000000000028" width="343" height="448.66666666666674"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="aiS-5w-hIc">
+                                                <rect key="frame" x="0.0" y="0.0" width="343" height="39.666666666666664"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description:" textAlignment="natural" lineBreakMode="clip" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hyJ-AC-bmW">
+                                                        <rect key="frame" x="0.0" y="0.0" width="226.33333333333334" height="39.666666666666664"/>
+                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="sco-Oc-3YD">
+                                                        <rect key="frame" x="226.33333333333334" y="0.0" width="116.66666666666666" height="39.666666666666664"/>
+                                                        <subviews>
+                                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="OW1-O3-W6U">
+                                                                <rect key="frame" x="0.0" y="0.0" width="61" height="39.666666666666664"/>
+                                                                <subviews>
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Slide:" textAlignment="natural" lineBreakMode="clip" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RSs-gD-Va8">
+                                                                        <rect key="frame" x="0.0" y="0.0" width="61" height="24"/>
+                                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
+                                                                        <nil key="textColor"/>
+                                                                        <nil key="highlightedColor"/>
+                                                                    </label>
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(Optional)" textAlignment="natural" lineBreakMode="clip" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="suN-Uf-ul0">
+                                                                        <rect key="frame" x="0.0" y="24" width="61" height="15.666666666666664"/>
+                                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                                                                        <nil key="textColor"/>
+                                                                        <nil key="highlightedColor"/>
+                                                                    </label>
+                                                                </subviews>
+                                                            </stackView>
+                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="##" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="z4D-WI-6i7">
+                                                                <rect key="frame" x="60.999999999999972" y="0.0" width="55.666666666666657" height="39.666666666666664"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="width" secondItem="z4D-WI-6i7" secondAttribute="height" multiplier="7:5" id="LGT-bj-HlK"/>
+                                                                </constraints>
+                                                                <nil key="textColor"/>
+                                                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                                                <textInputTraits key="textInputTraits"/>
+                                                            </textField>
+                                                        </subviews>
+                                                        <constraints>
+                                                            <constraint firstItem="z4D-WI-6i7" firstAttribute="top" secondItem="sco-Oc-3YD" secondAttribute="top" id="Q3z-Ea-Vi5"/>
+                                                            <constraint firstItem="OW1-O3-W6U" firstAttribute="leading" secondItem="sco-Oc-3YD" secondAttribute="leading" id="vfs-0s-kRN"/>
+                                                            <constraint firstItem="z4D-WI-6i7" firstAttribute="height" secondItem="OW1-O3-W6U" secondAttribute="height" id="xMj-BZ-Y0r"/>
+                                                        </constraints>
+                                                    </stackView>
+                                                </subviews>
+                                                <constraints>
+                                                    <constraint firstAttribute="bottom" secondItem="sco-Oc-3YD" secondAttribute="bottom" id="8Vf-TM-4TM"/>
+                                                    <constraint firstItem="hyJ-AC-bmW" firstAttribute="top" secondItem="aiS-5w-hIc" secondAttribute="top" id="CeI-QD-vYK"/>
+                                                    <constraint firstItem="sco-Oc-3YD" firstAttribute="top" secondItem="aiS-5w-hIc" secondAttribute="top" id="hbm-Ue-cKN"/>
+                                                    <constraint firstItem="sco-Oc-3YD" firstAttribute="height" secondItem="hyJ-AC-bmW" secondAttribute="height" id="p9k-fr-xMH"/>
+                                                    <constraint firstAttribute="bottom" secondItem="hyJ-AC-bmW" secondAttribute="bottom" id="rRU-KP-o9K"/>
+                                                </constraints>
+                                            </stackView>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="onDrag" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="0XS-TN-OiW">
+                                                <rect key="frame" x="0.0" y="47.666666666666657" width="343" height="401"/>
+                                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            </textView>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="0XS-TN-OiW" firstAttribute="leading" secondItem="OaG-nz-s70" secondAttribute="leading" id="DSa-uK-a3X"/>
+                                            <constraint firstAttribute="bottom" secondItem="0XS-TN-OiW" secondAttribute="bottom" id="WlF-LE-ZR1"/>
+                                            <constraint firstItem="aiS-5w-hIc" firstAttribute="leading" secondItem="OaG-nz-s70" secondAttribute="leading" id="frH-js-fXs"/>
+                                            <constraint firstAttribute="trailing" secondItem="0XS-TN-OiW" secondAttribute="trailing" id="hog-U1-7t0"/>
+                                            <constraint firstAttribute="trailing" secondItem="aiS-5w-hIc" secondAttribute="trailing" id="rtC-es-RcH"/>
+                                        </constraints>
+                                    </stackView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Inf-AI-Sc7">
+                                        <rect key="frame" x="0.0" y="516.66666666666663" width="343" height="108.33333333333337"/>
+                                        <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                                        <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="Submit">
+                                            <color key="titleColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="Inf-AI-Sc7" secondAttribute="trailing" id="5dY-BQ-FX4"/>
+                                    <constraint firstItem="Inf-AI-Sc7" firstAttribute="leading" secondItem="BkD-kM-WEx" secondAttribute="leading" id="B0o-cr-DJM"/>
+                                    <constraint firstItem="hsI-fk-ixg" firstAttribute="leading" secondItem="BkD-kM-WEx" secondAttribute="leading" id="ETF-fg-3yR"/>
+                                    <constraint firstAttribute="trailing" secondItem="hsI-fk-ixg" secondAttribute="trailing" id="GnT-cW-Fgr"/>
+                                    <constraint firstItem="OaG-nz-s70" firstAttribute="leading" secondItem="BkD-kM-WEx" secondAttribute="leading" id="IG0-eF-80B"/>
+                                    <constraint firstAttribute="trailing" secondItem="OaG-nz-s70" secondAttribute="trailing" id="Y01-fZ-iqu"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="BkD-kM-WEx" firstAttribute="leading" secondItem="Oy8-8c-Ueu" secondAttribute="leading" constant="16" id="3Kg-TM-Tfi"/>
+                            <constraint firstItem="BkD-kM-WEx" firstAttribute="top" secondItem="Oy8-8c-Ueu" secondAttribute="top" constant="8" id="5Cx-OW-4gk"/>
+                            <constraint firstItem="Oy8-8c-Ueu" firstAttribute="trailing" secondItem="BkD-kM-WEx" secondAttribute="trailing" constant="16" id="RTB-F9-bYR"/>
+                            <constraint firstItem="Oy8-8c-Ueu" firstAttribute="bottom" secondItem="BkD-kM-WEx" secondAttribute="bottom" constant="8" id="aOX-0A-UuW"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Oy8-8c-Ueu"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Questions" image="Question" landscapeImage="Question" id="Has-a6-Y8Y"/>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="-124" y="-447"/>
+            <point key="canvasLocation" x="-124" y="-447.04433497536945"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="DFZ-Zh-oiv">
