--- a/StudentApp/StudentApp/Base.lproj/Main.storyboard
+++ b/StudentApp/StudentApp/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="N62-tk-ayN">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="N62-tk-ayN">
     <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,7 +13,6 @@
         <!--Questions-->
         <scene sceneID="E4R-4k-ZT5">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="MDf-lR-MnK" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="OP0-bE-IPH" customClass="QuestionViewController" customModule="StudentApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="rnH-cX-dsE">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
@@ -150,6 +149,7 @@
                         <outlet property="slideField" destination="z4D-WI-6i7" id="EEB-LV-fER"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MDf-lR-MnK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-124" y="-447.04433497536945"/>
         </scene>
@@ -162,12 +162,47 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="NCm-oP-OWe" kind="relationship" relationship="rootViewController" id="IIn-0Y-PDW"/>
+                        <segue destination="mwM-QK-aOh" kind="relationship" relationship="rootViewController" id="gV6-aO-Bgo"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9Bm-84-fcw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2175" y="-78"/>
+            <point key="canvasLocation" x="-4326" y="-78"/>
+        </scene>
+        <!--Available Rooms-->
+        <scene sceneID="0df-Np-Zf7">
+            <objects>
+                <tableViewController id="mwM-QK-aOh" userLabel="Available Rooms" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="p4K-tQ-uNm">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="JUm-5y-mMg">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="JUm-5y-mMg" id="RC3-YG-waO">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.666666666666664"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="mwM-QK-aOh" id="bS2-qY-pmG"/>
+                            <outlet property="delegate" destination="mwM-QK-aOh" id="3Ad-xg-tUp"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="Vqo-FV-WQ3">
+                        <barButtonItem key="rightBarButtonItem" title="Settings" id="3Wr-s2-xhe" userLabel="Settings"/>
+                    </navigationItem>
+                    <connections>
+                        <segue destination="NCm-oP-OWe" kind="show" id="HTO-QA-cXR"/>
+                        <segue destination="Dd4-P5-WF2" kind="show" id="FjT-lk-NMe"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VUb-tN-2ui" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2845" y="-78"/>
         </scene>
         <!--Discussion-->
         <scene sceneID="Cbe-Tj-5AW">
@@ -227,10 +262,10 @@
             </objects>
             <point key="canvasLocation" x="-124" y="304"/>
         </scene>
-        <!--View Controller-->
+        <!--Settings-->
         <scene sceneID="QSx-mT-7Lb">
             <objects>
-                <viewController id="Dd4-P5-WF2" sceneMemberID="viewController">
+                <viewController id="Dd4-P5-WF2" userLabel="Settings" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ZPq-5E-kXU">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -244,8 +279,11 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Discussion" width="26.666666030883789" height="26.666666030883789"/>
-        <image name="Question" width="26.666666030883789" height="29.333333969116211"/>
-        <image name="Slides" width="26.666666030883789" height="26.666666030883789"/>
+        <image name="Discussion" width="19.200000762939453" height="19.200000762939453"/>
+        <image name="Question" width="19.200000762939453" height="21.120000839233398"/>
+        <image name="Slides" width="19.200000762939453" height="19.200000762939453"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="FjT-lk-NMe"/>
+    </inferredMetricsTieBreakers>
 </document>
