--- a/StudentApp/StudentApp/Base.lproj/Main.storyboard
+++ b/StudentApp/StudentApp/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="N62-tk-ayN">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="N62-tk-ayN">
     <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -193,6 +193,11 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="Vqo-FV-WQ3">
+                        <barButtonItem key="leftBarButtonItem" title="Test Session" id="7dq-Lh-M7J">
+                            <connections>
+                                <segue destination="NCm-oP-OWe" kind="show" id="Xak-Q6-h3x"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Settings" id="3Wr-s2-xhe" userLabel="Settings"/>
                     </navigationItem>
                     <connections>
@@ -203,6 +208,58 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VUb-tN-2ui" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-2845" y="-78"/>
+        </scene>
+        <!--Quiz View Controller-->
+        <scene sceneID="63o-hN-2pe">
+            <objects>
+                <viewController storyboardIdentifier="QuizViewController" modalTransitionStyle="crossDissolve" modalPresentationStyle="overFullScreen" id="pMd-Hg-Dqn" customClass="QuizViewController" customModule="StudentApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="4If-RH-l1w">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hEO-d9-fkc" userLabel="ContentView">
+                                <rect key="frame" x="24" y="76" width="327" height="670"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" restorationIdentifier="titleCard" text="Title Card" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nte-Qk-bwX">
+                                        <rect key="frame" x="101" y="25" width="124" height="36"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Wd-xV-kD6">
+                                        <rect key="frame" x="8" y="614" width="311" height="48"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                                        <state key="normal" title="Submit Answer">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="0.058823529411764705" green="0.039215686274509803" blue="0.019607843137254902" alpha="0.84999999999999998" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="pr2-EY-Fq4" firstAttribute="trailing" secondItem="hEO-d9-fkc" secondAttribute="trailing" constant="24" id="7ad-1i-pwQ"/>
+                            <constraint firstItem="hEO-d9-fkc" firstAttribute="top" secondItem="pr2-EY-Fq4" secondAttribute="top" constant="32" id="94X-dp-Sce"/>
+                            <constraint firstItem="hEO-d9-fkc" firstAttribute="leading" secondItem="pr2-EY-Fq4" secondAttribute="leading" constant="24" id="Rex-Xb-PTW"/>
+                            <constraint firstItem="pr2-EY-Fq4" firstAttribute="bottom" secondItem="hEO-d9-fkc" secondAttribute="bottom" constant="32" id="m8U-jg-PWB"/>
+                        </constraints>
+                        <edgeInsets key="layoutMargins" top="0.0" left="20" bottom="0.0" right="20"/>
+                        <viewLayoutGuide key="safeArea" id="pr2-EY-Fq4"/>
+                    </view>
+                    <value key="contentSizeForViewInPopover" type="size" width="100" height="200"/>
+                    <connections>
+                        <outlet property="quizContentView" destination="hEO-d9-fkc" id="J47-Dy-2Vj"/>
+                        <outlet property="submitButton" destination="3Wd-xV-kD6" id="enN-ly-4vX"/>
+                        <outlet property="titleCard" destination="Nte-Qk-bwX" id="Sam-BI-gXe"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="boC-qS-9hB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1207.2" y="-881.5270935960591"/>
         </scene>
         <!--Discussion-->
         <scene sceneID="Cbe-Tj-5AW">
@@ -220,11 +277,16 @@
             </objects>
             <point key="canvasLocation" x="-124" y="-1188"/>
         </scene>
-        <!--Tab Bar Controller-->
+        <!--Student Tab Bar Controller-->
         <scene sceneID="BP1-lN-Mf1">
             <objects>
-                <tabBarController id="NCm-oP-OWe" sceneMemberID="viewController">
+                <tabBarController definesPresentationContext="YES" id="NCm-oP-OWe" customClass="StudentTabBarController" customModule="StudentApp" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="Y9T-H0-60l">
+                        <barButtonItem key="leftBarButtonItem" title="Test Quiz" id="gBf-1B-ZCt">
+                            <connections>
+                                <action selector="testQuiz:" destination="NCm-oP-OWe" id="hBs-If-mCl"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Settings" id="Jd4-Ix-oxx">
                             <connections>
                                 <segue destination="Dd4-P5-WF2" kind="show" id="MO6-oB-ogx"/>
@@ -279,11 +341,12 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Discussion" width="19.200000762939453" height="19.200000762939453"/>
-        <image name="Question" width="19.200000762939453" height="21.120000839233398"/>
-        <image name="Slides" width="19.200000762939453" height="19.200000762939453"/>
+        <image name="Discussion" width="26.666666030883789" height="26.666666030883789"/>
+        <image name="Question" width="26.666666030883789" height="29.333333969116211"/>
+        <image name="Slides" width="26.666666030883789" height="26.666666030883789"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="FjT-lk-NMe"/>
+        <segue reference="MO6-oB-ogx"/>
+        <segue reference="HTO-QA-cXR"/>
     </inferredMetricsTieBreakers>
 </document>
