--- a/StudentApp/StudentApp/Base.lproj/Main.storyboard
+++ b/StudentApp/StudentApp/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="N62-tk-ayN">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="N62-tk-ayN">
     <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -266,6 +266,9 @@
                                                 <state key="normal" title="Submit Answer">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="buttonClick:" destination="pMd-Hg-Dqn" eventType="touchUpInside" id="Pm4-ec-3qv"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <constraints>
@@ -397,6 +400,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="295" height="519"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="PEL-0O-cWU"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tDY-96-5v7" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -404,9 +408,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Discussion" width="19.200000762939453" height="19.200000762939453"/>
-        <image name="Question" width="19.200000762939453" height="21.120000839233398"/>
-        <image name="Slides" width="19.200000762939453" height="19.200000762939453"/>
+        <image name="Discussion" width="26.666666030883789" height="26.666666030883789"/>
+        <image name="Question" width="26.666666030883789" height="29.333333969116211"/>
+        <image name="Slides" width="26.666666030883789" height="26.666666030883789"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="FjT-lk-NMe"/>
